apps/prod/public/vaultwarden/deploy-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: vw
  labels:
    app.kubernetes.io/name: vw
    app.kubernetes.io/component: app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: vw
      app.kubernetes.io/component: app
  template:
    metadata:
      name: vw
      labels:
        app.kubernetes.io/name: vw
        app.kubernetes.io/component: app
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: vaultwarden-app-pvc
      containers:
        - name: vw
          image: vaultwarden/server:1.37.4-alpine
          volumeMounts:
            - name: data
              mountPath: "/data"

          startupProbe:
            httpGet:
              path: /alive
              port: 7561
              scheme: HTTP
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 12
            
          livenessProbe:
            httpGet:
              path: /alive
              port: 7561
              scheme: HTTP
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
            
          readinessProbe:
            httpGet:
              path: /alive
              port: 7561
              scheme: HTTP
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
