apps/prod/public/vaultwarden/deploy-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: vw
  labels:
    app.kubernetes.io/name: vw
    app.kubernetes.io/component: db
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: vw
      app.kubernetes.io/component: db
  template:
    metadata:
      name: db
      labels:
        app.kubernetes.io/name: vw
        app.kubernetes.io/component: db
      annotations:
        k8up.io/backup: "true"
        k8up.io/backupcommand: "sh -c 'PGDATABASE=\"$POSTGRES_DB\" PGUSER=\"$POSTGRES_USER\" PGPASSWORD=\"$POSTGRES_PASSWORD\" pg_dump --clean'"
        k8up.io/file-extension: ".sql"
    spec:
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: vaultwarden-db-pvc
      containers:
        - name: postgres
          image: postgres:17.11-alpine
          volumeMounts:
            - name: db
              mountPath: "/data"

          startupProbe:
            exec:
              command:
                - pg_isready
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 12
          
          livenessProbe:
            exec:
              command:
                - pg_isready
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          
          readinessProbe:
            exec:
              command:
                - pg_isready
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
