apps/prod/public/vaultwarden/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: vw
  labels:
    app.kubernetes.io/name: vw
    app.kubernetes.io/component: app
spec:
  selector:
    app.kubernetes.io/name: vw
    app.kubernetes.io/component: app
  ports:
    - port: 7561
      protocol: TCP
      targetPort: 7561
  type: ClusterIP
