apps/prod/public/vaultwarden/route-app.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-plain
  namespace: vw
spec:
  parentRefs:
    - name: main-gw
      namespace: kgateway
      sectionName: http
  hostnames:
    - "vault.hyvel.eu"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app
  namespace: vw
spec:
  parentRefs:
    - name: main-gw
      namespace: kgateway
      sectionName: https
  hostnames:
    - "vault.hyvel.eu"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: app
          port: 7561
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: Strict-Transport-Security
                value: "max-age=63072000; includeSubDomains; preload"
            remove: [ "Server" ]
